Removed hack Was fixed by adding overflow:auto to #startside

--- a/src/components/Message/MessageWizard.css
+++ b/src/components/Message/MessageWizard.css
@@ -91,10 +91,6 @@
         height: 100%;
     }
 
-    .message-wizard-hack {
-        display: none;
-    }
-
     .wizard-step-map {
         display: none;
     }
